Shifted author and licence in package.json file

--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "author": "Jovin Mwilanga",
+  "license": "ISC",
+
   "name": "theHarvardClassroom",
   "version": "1.0.0",
   "description": "Harvard Question Website",
@@ -13,7 +16,5 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
-  },
-  "author": "Jovin Mwilanga",
-  "license": "ISC"
+  }
 }
