--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "harvardClassExpress",
+  "name": "harvardClass",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
     "body-parser": "~1.8.1",
