--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "jade": "~1.6.0",
     "mongoose": "^3.8.21",
     "morgan": "~1.3.0",
+    "passport": "^0.2.1",
+    "passport-openid": "^0.3.1",
     "serve-favicon": "~2.1.3"
   }
 }
