--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "express": "~4.9.0",
+    "express-session": "^1.9.3",
     "express.io": "^1.1.13",
     "jade": "~1.6.0",
     "mongoose": "^3.8.21",
