--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "morgan": "~1.3.0",
     "passport": "^0.2.1",
     "passport-openid": "^0.3.1",
-    "serve-favicon": "~2.1.3"
+    "passport.socketio": "^3.4.1",
+    "serve-favicon": "~2.1.3",
+    "socket.io": "^1.2.1"
   }
 }
