--- a/package.json
+++ b/package.json
@@ -11,14 +11,12 @@
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "express": "~4.9.0",
-    "express-session": "^1.9.3",
-    "express.io": "^1.1.13",
+    "express-session": "^1.9.3"
     "jade": "~1.6.0",
     "mongoose": "^3.8.21",
     "morgan": "~1.3.0",
     "passport": "^0.2.1",
     "passport-openid": "^0.3.1",
-    "passport.socketio": "^3.4.1",
     "serve-favicon": "~2.1.3",
     "socket.io": "^1.2.1"
   }
