--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "connect-mongo": "^0.5.3",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
+    "ejs": "^1.0.0",
     "express": "~4.9.0",
     "express-session": "^1.9.3",
     "jade": "~1.6.0",
