--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "~1.8.1",
     "connect-mongo": "^0.5.3",
     "cookie-parser": "~1.3.3",
+    "cuid": "^1.2.4",
     "debug": "~2.0.0",
     "ejs": "^1.0.0",
     "express": "~4.9.0",
