--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "harvardClass",
-  "version": "1.0.0",
+  "name": "HarvardClass",
+  "version": "1.0.2",
   "homepage": "https://harvardclass.herokuapp.com",
   "authors": [
     "Jovin Mwilanga <jovinbeda@hotmail.com>"
