--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^3.8.21",
     "morgan": "~1.3.0",
     "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
     "passport-openid": "^0.3.1",
     "q": "^1.1.2",
     "serve-favicon": "~2.1.3",
