--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "tests"
   ],
   "dependencies": {
-    "normalize.css": "~3.0.2"
+    "normalize.css": "~3.0.2",
+    "valdr": "~1.1.1"
   }
 }
