--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "postinstall": "bower install"
   },
   "dependencies": {
+    "bower": "1.3.12",
     "body-parser": "~1.8.1",
     "connect-mongo": "^0.5.3",
     "cookie-parser": "~1.3.3",
