--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   },
   "scripts": {
     "start": "node app.js",
-    "postinstall": "bower install"
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "dependencies": {
-    "bower": "1.3.12",
     "body-parser": "~1.8.1",
+    "bower": "^1.3.12",
     "connect-mongo": "^0.5.3",
     "cookie-parser": "~1.3.3",
     "cuid": "^1.2.4",
