--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "express-session": "^1.9.3",
     "jade": "~1.6.0",
     "moment": "^2.9.0",
-    "mongoose": "^3.8.12",
+    "mongoose": "3.8.x",
     "mongoose-auto-increment": "^3.2.0",
     "morgan": "~1.3.0",
     "passport": "^0.2.1",
